--- a/desafios/des10/android02.html
+++ b/desafios/des10/android02.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Como surgiu o Mascote do Andriod</title>
     <link rel="shortcut icon" href="imagens/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="style02.css">
+    <link rel="stylesheet" href="estilos/style02.css">
 </head>
 
 <body>
